# embers

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  log.txt
embers/: CMakeLists.txt
embers/include/embers/: config.hpp  defines.hpp  delete_me.hpp  logger.hpp  option.hpp  result.hpp  test.hpp  utils.hpp
embers/include/embers/defines/: types.hpp  utils.hpp
embers/src/: engine_config.cpp  engine_config.hpp  error_code.hpp  logger.cpp  platform.cpp  platform.hpp  result.hpp  test.cpp  vulkan.cpp  vulkan.hpp  vulkan_debug_messenger.cpp  vulkan_debug_messenger.hpp  window.cpp  window.hpp
embers/src/containers/: allocator.hpp  debug_allocator.cpp  debug_allocator.hpp
embers/src/ecs/: entity.hpp  manager.hpp
embers/src/someday/: README.txt  result.hpp
embers/src/vulkan/: common.cpp  common.hpp  debug_messenger.cpp  debug_messenger.hpp  device.cpp  device.hpp  instance.cpp  instance.hpp  surface.cpp  surface.hpp
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
